Telemetry-as-Code-Declarative-Observability-with-OpenTelemetry/gitops/bootstrap/service-ingress.yaml
# Don't forget to add the hosts to /etc/hosts:
# 127.0.0.1 argocd.local
# 127.0.0.1 prometheus.local
# 127.0.0.1 perses.local
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-server
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perses-ingress
  namespace: monitoring
  labels:
    app.kubernetes.io/name: perses
spec:
  ingressClassName: nginx
  rules:
  - host: perses.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: perses
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
